# selfcalib_poles

calibration_walking_human/: LSE_line.m  abc_line2mb.m  analyse_P.m  angle2matrix_cvpr2002.m  angle2matrix_pami2006.m  associate_poles_w_tracker.m  calibrate_cvpr2002.m  calibrate_cvpr2002_old.m  calibrate_pami2006.m  calibration_walking_human.m  center.m  extract_vanishing_point.m  gt_horizon_line.m  gt_poles.m  gt_vanishing_points.m  horizon_line.m  main.m  parse_xml_calibration_file.m  plot_poles_grid.m  quick_test_min_dist.m  quick_test_ransac_inlier.m  quick_tests.m  quick_tests_tracker_associations.m  ransac_line.m  read_tracker_results.m  sample_poles_initial.m  test_calibration.m  test_gt_calibration.m  trunc_roi.m
calibration_walking_human/ransac/: FindLine.m  createLine.m  drawLine.m  intersectLines.m  mb2ABC.m  ransac_example.m  ransac_horizon_line.m
nonlinear_optimization/: angle2matrix.m  evaluate_n_poles.m  evaluate_var_poles.m  evaluate_var_poles_v2.m  extract_poles.m  get_poles_variance.m  gt_poles.m  ics2wcs_H.m  main.m  mb_line2abc.m  nonlinear_selfcalibration.m  nonlinear_selfcalibration_optimized.m  pedestrian_orientation_PCA.m  pets_config.m  plot_axis.m  quick_tests.m  sample_poles.m  sample_poles_for_evaluation.m  sample_poles_for_evaluation_radius.m  test_whole_calibration.m  towncentre_config.m  wcs2ics_H.m
poles_extractor/: CMakeLists.txt
poles_extractor/include/: interface_utils.h  pole.h  poles_extractor.h  poles_extractor_config.h
poles_extractor/src/: interface_utils.cpp  main.cpp  pole.cpp  poles_extractor.cpp  poles_extractor_config.cpp
